<resources>
    <string name="app_name">MyTravel</string>
    <string name="user_name">User Name</string>
    <string name="pass_word">PassWord</string>
    <string name="phone_num">Phone Number</string>
    <string name="name">Name</string>
    <string name="re_pass_word">Retype Password</string>
    <string name="email">Email</string>

    <string name="login">Login?</string>
    <string name="register">Create an account?</string>
    <string name="title_activity_maps">Map</string>

    <string name="action_home">Home</string>
    <string name="action_sche">Schedule</string>
    <string name="action_trip">Trip</string>
    <string name="action_noti">Notification</string>
    <string name="action_pro">Profile</string>

    <string-array name="list_place">
        <item>Văn Thánh Miếu Vĩnh Long</item>
        <item>Đình Long Thanh</item>
        <item>Chợ Nổi Trà Ôn</item>
        <item>Cầu Mỹ Thuận</item>
    </string-array>

    <string-array name="address_place">
        <item>Tran Phu, Phuong 4, Vinh Long</item>
        <item>Phuong 5, Vinh Long</item>
        <item>Update later</item>
        <item>Update later</item>
    </string-array>



</resources>